--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/movies"
             android:icon="@drawable/ic_menu_camera"
             android:title="MOVIES" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/tvshows"
             android:icon="@drawable/ic_menu_gallery"
             android:title="TV SHOWS" />
         <item
