--- a/app/src/main/res/layout/content_movie_detail.xml
+++ b/app/src/main/res/layout/content_movie_detail.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-
         >
 
         <LinearLayout
@@ -162,6 +161,26 @@
             android:layout_width="match_parent"
             android:layout_height="190dp"
             android:nestedScrollingEnabled="false" />
+
+        <TextView
+            android:id="@+id/text_view_similar_movie_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Similar Movies"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_similar_movie_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:nestedScrollingEnabled="false" />
+
 
 
     </LinearLayout>
